--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,15 @@
 }
 
 .card {
-  padding: 2em;
+  margin-top: 10px;
+  display: flex;               
+  justify-content: space-between;
+  align-items: center;         
+  gap: 10px;     
+}
+
+.sectionCard:hover {
+  transform: scale(1.05);
 }
 
 .read-the-docs {
